--- a/logback/access-adapter/pom.xml
+++ b/logback/access-adapter/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-<!-- LV --><version>0.9.33</version>
+<!-- LV --><version>0.9.34-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
