--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -265,7 +265,7 @@
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.3rdparty.jgroups-all</artifactId>
-				<version>2.6.8.GA</version>
+				<version>2.8.9.CR3</version>
 			</dependency>
 			
 			<dependency>
