--- a/sandbox/jul-sandbox/pom.xml
+++ b/sandbox/jul-sandbox/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.37</version>
+		<version><!-- LV -->0.9.38-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
