--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -271,7 +271,7 @@
 			<dependency>
 				<groupId>de.huxhorn.lilith</groupId>
 				<artifactId>de.huxhorn.lilith.3rdparty.jmdns</artifactId>
-				<version>2.0-patched</version>
+				<version>3.0</version>
 				<!--
 				<groupId>jmdns</groupId>
 				<artifactId>jmdns</artifactId>
