--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.master</artifactId>
-	<version><!-- LV -->0.9.39</version>
+	<version><!-- LV -->0.9.40-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Lilith master pom file</name>
 	<description>This file is part of Lilith. It's the master pom file that is used to build all other modules.</description>
@@ -20,7 +20,7 @@
 
 		<site>
 			<id>local-site</id>
-			<url>file://${user.home}/local-maven/site/lilith/${pom.artifactId}</url>
+			<url>file://${user.home}/local-maven/site/lilith</url>
 		</site>
 
 		<repository>
