--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -833,6 +833,10 @@
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.1-beta-1</version>
 				</plugin>
+				<plugin>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>1.3.3</version>
+				</plugin>
 				
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
