--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -58,7 +58,6 @@
 							<addClasspath>true</addClasspath>
 						</manifest>
 						<manifestEntries>
-							<mode>development</mode>
 							<url>${pom.url}</url>
 						</manifestEntries>
 					</archive>
@@ -81,7 +80,47 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>1.3.2</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<manifestEntries>
+									<Main-Class>de.huxhorn.lilith.Lilith</Main-Class>
+									<url>${pom.url}</url>
+								</manifestEntries>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>all</shadedClassifierName>
+					<filters>
+						<filter>
+							<!-- remove all signatures -->
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+				</configuration>
+			</plugin>
 		</plugins>
+		
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
