--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -84,7 +84,7 @@
 
 		<site>
 			<id>local-site</id>
-			<url>file://${user.home}/local-maven/site/lilith/${pom.artifactId}</url>
+			<url>file://${user.home}/local-maven/site/lilith/</url>
 		</site>
 
 		<repository>
