--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -31,14 +31,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<!--
 		making sure that gpg2 works
-		
-		Hint:
-		I had to do the following to make using gpg-agent work:
-		mv gpg gpg1
-		ln gpg2 gpg
-		due to http://jira.codehaus.org/browse/MGPG-23
-		This sucks pretty hard :(
 		-->
+		<gpg.executable>gpg2</gpg.executable>
 		<gpg.useagent>true</gpg.useagent>
 		<gpg.keyname>740A1840</gpg.keyname>
 	</properties>
@@ -834,7 +828,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.0</version>
+					<version>1.1</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-source-plugin</artifactId>
